2013-07-05  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-newsitem-mode.el: New file, split off from
	gentoo-syntax.el.
	* gentoo-syntax.el (gentoo-newsitem-font-lock-keywords)
	(gentoo-newsitem-mode, gentoo-newsitem-insert-skeleton):
	Variable and functions moved to gentoo-newsitem-mode.el.
	* Makefile (DISTFILES): Update.

2013-07-04  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-syntax.el: Remove eselect-mode; it will be maintained
	in the eselect repository.
	(eselect-mode-font-lock-keywords, eselect-mode): Variable and
	function removed.
	* eselect-mode-keywords.el: File removed.
	* gentoo-syntax.texi: Don't mention eselect-mode.
	* Makefile (DISTFILES): Update.

2013-03-08  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.21 released.

	* Makefile (dist): Use xz for compression.
	(clean): Also remove *.xz.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated
	from eclasses.

	* keyword-generation.sh: Don't output variables with an empty list
	of functions.

2013-01-13  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-collect-equal-cdrs): New optional
	argument LIMIT starts a new element in the destination list, after
	that number of elements from the source list have been collected.
	(ebuild-mode-font-lock-keywords): Limit regexp size by calling
	ebuild-mode-collect-equal-cdrs with the limit argument; a value
	of 1000 appears to keep the size below the 32 kbyte limit.
	See also the change of 2012-09-22.

2012-09-23  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass-documentation):
	Fix quoting.

2012-09-22  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.20 released.

	* Makefile (DISTFILES): Include keyword-generation.sh.

	* gentoo-syntax.el (ebuild-mode-font-lock-keywords): Addition of
	keywords in the previous change had caused this variable to exceed
	the 32 kbyte size limit for regular expressions. Unfortunately,
	this is a hard limit in Emacs' C code, MAX_BUF_SIZE in regex.c,